--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Huecos GrupoInter</title>
 </head>
 <body>
-    <header>Hola mundo</header>
+    <header class="container mx-auto">Hola mundo</header>
 </body>
 </html>
