prueba google calendar

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <title>Huecos GrupoInter</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body>
-    <header class="container mx-auto">Hola mundo</header>
+<body class="grid justify-items-center mx-auto decoration-clone bg-gradient-to-b from-yellow-400 to-red-500 ...">Hola mundo>
         <main>
+
+            <form>
+                <label for="si_ola">Aquí es
+                <input type="file" name="si_ola" />
+            </label>
+
             <video id="player" controls autoplay></video>
-            <button id="capture">Capture</button>
+            <div id="capture">Capture</div>
             <canvas id="canvas" width=320 height=240></canvas>
+
+            </form>
+            <iframe src="https://calendar.google.com/calendar/embed?src=c_0mt1tsfnir1uttlh7k44g1idik%40group.calendar.google.com&ctz=America%2FBogota" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </main>
 </body>
 <script>
