--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Huecos GrupoInter</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body class="grid justify-items-center mx-auto decoration-clone bg-gradient-to-b from-yellow-400 to-red-500 ...">Hola mundo>
+<body class="grid justify-items-center mx-auto ">
         <main>
 
             <form>
