--- a/2.html
+++ b/2.html
@@ -45,10 +45,12 @@
                       </label>
                     </div>
                     <div class="flex-1 activarCamara">
-                      <input type="file" accept="image/*" capture="camera">
+                      <input type="file" name="file2" accept="image/*" capture="camera">
+                      <label for="file2" class="js-labelFile">
                       <i class="fas fa-camera-retro"></i>
                       <span >TOMAR </span>
                       <span >FOTO </span>
+                    </label>
                     </div>
                   </article> 
 
