--- a/2.html
+++ b/2.html
@@ -45,7 +45,7 @@
                       </label>
                     </div>
                     <div class="flex-1 activarCamara">
-                      <input type="file" name="file2" accept="image/*" capture="camera">
+                      <input type="file" name="file2" accept="image/*" capture="camera" class="input-file">
                       <label for="file2" class="js-labelFile">
                       <i class="fas fa-camera-retro"></i>
                       <span >TOMAR </span>
