--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <img src="logoGrupoInter.svg" alt="GrupoInter" class="logo-img">
             <div class="tittleBottom">
-              <p>un</p> <h2>Descuento</h2> <p>del</p> <h2>20</h2><p>%</p>
+              <p>Un</p> <h2>Descuento</h2> <p>del</p> <h2>20</h2><p>%</p>
             </div>
           </header>
        
