--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <option value="" disabled selected>Ciudad</option>
           <option></option>
       </select>
-      <select id="localCampo"  class="special-select">
+      <select id="localCampo"  class="special-select" name="local">
         <option value="" disabled selected>Punto</option>
         <option></option>
       </select>
