--- a/index.html
+++ b/index.html
@@ -112,8 +112,13 @@
 
   <p>
     TU DESCUENTO TE ESTÁ ESPERANDO <strong class="nombreUsuario"></strong>
-    EN EL PUNTO DE SERVICIO “SAN JUAN”,
-    ESTE VIERNES 17 DE JULIO A LAS 11:30 A.M.
+    EN EL PUNTO DE SERVICIO  <strong id="lugar">
+
+    </strong>,
+    <strong id="horario">
+
+    </strong>
+    
   </p>
 
   <p  class="my-4">
