--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <input type="button" name="next" class="next btn-agendar" id ="pasoDatos"  value="AGENDA TU CITA YA"  />
 
     <p class="text-xs text-center mt-2 mx-auto">ACTIVANDO EL BOTÓN ACEPTAS
-      NUESTROS <a href="#" class="click__me">TÉRMINOS Y CONDICIONES</a> </p>
+      NUESTRA <a href="https://grupointer.co/aviso-legal/" class="click__me" target="_blank">POLÍTICA DE TRATAMIENTO DE DATOS</a> </p>
       
   </fieldset>
   <fieldset>
